# rat-wgpu

./: Cargo.toml
examples/: colors.rs  hello_pipeline.rs  hello_world.rs
src/: colors.rs  cursor.rs  events.rs  image.rs  lib.rs  text_atlas.rs  util.rs
src/backend/: backend.rs  builder.rs  composite_bg.wgsl  composite_fg.wgsl  image_buffer.rs  img.wgsl  mod.rs  plan_cache.rs  rasterize.rs  surface.rs  t
src/events/: convert_crossterm.rs  convert_winit.rs
src/font/: font.rs  font_data.rs  fonts.rs  mod.rs  outline.rs  rasterize.rs
src/postprocessor/: blit.wgsl  crt.rs  default.rs  mod.rs
tests/: test.rs
